--- a/learning_logs/templates/learning_logs/topic.html
+++ b/learning_logs/templates/learning_logs/topic.html
@@ -11,7 +11,11 @@
   <ul>
   {% for entry in entries %}
     <li>
-      <p>{{ entry.date_added|date:'M d, Y H:i' }}</p>
+      {% if entry.mod %}
+        <p>Added: {{ entry.date_added|date:'M d, Y - H:i' }} | Edited: {{ entry.date_mod|date:'M d, Y - H:i' }}</p>
+      {% else %}
+        <p>Added: {{ entry.date_added|date:'M d, Y - H:i' }}</p>
+      {% endif %}
       <p> {{ entry.text|linebreaks }}</p>
       <p>
         <a href="{% url 'learning_logs:edit_entry' entry.id %}">edit entry</a>
