--- a/learning_logs/templates/learning_logs/edit_entry.html
+++ b/learning_logs/templates/learning_logs/edit_entry.html
@@ -1,15 +1,22 @@
 {% extends "learning_logs/base.html" %}
+{% load bootstrap3 %}
+
+{% block header %}
+  <h2>
+    Edit entry for <a href="{% url 'learning_logs:topic' topic.id %}">
+      {{ topic }}</a>
+  </h2>
+{% endblock header %}
 
 {% block content %}
 
-<p><a href="{% url 'learning_logs:topic' topic.id %}">{{ topic }}</a></p>
+  <form action="{% url 'learning_logs:edit_entry' entry.id %}" method='post'>
+    {% csrf_token %}
+    {% bootstrap_form form %}
 
-<p>Edit entry:</p>
-
-<form action="{% url 'learning_logs:edit_entry' entry.id %}" method='post'>
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button name="submit">save changes</button>
-</form>
+    {% buttons %}
+      <button name="submit" class="btn btn-primary">SAVE CHANGES</button>
+    {% endbuttons %}
+  </form>
 
 {% endblock content %}
