--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -1,4 +1,4 @@
-{% load bootstrap3 %}
+{% load bootstrap5 %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -14,39 +14,52 @@
 
   </head>
 
-  <body>
+  <body class="bg-dark" >
     <!-- Static navbar -->
-    <nav class="navbar navbar-default navbar-static-top">
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-default bg-primary">
       <div class="container">
+        <a class="navbar-brand" href="{% url 'learning_logs:index' %}">
+        Learning Log</a>
+        <button class="navbar-toggler" type="button" 
+        data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="true"
+        aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed"
-              data-toggle="collapse" data-target="#navbar"
-              aria-expanded="false" aria-controls="navbar">
-          </button>
-          <a class="navbar-brand" href="{% url 'learning_logs:index' %}">
-              Learning Log</a>
-        </div>
-
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="{% url 'learning_logs:topics' %}">Topics</a></li>
+        <div class="navbar-collapse collapse show" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page"
+                href="{% url 'learning_logs:topics' %}">Topics</a></li>
           </ul>
 
-          <ul class="nav navbar-nav navbar-right">
+          <ul class="navbar-nav me-10 mb-2 mb-lg-0">
             {% if user.is_authenticated %}
-              <li><a>Hello, {{ user.username }}.</a></li>
-              <li><a href="{% url 'users:logout' %}">Log Out</a></li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="true">
+                  Hello, {{ user.username }}.</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page"
+                href="{% url 'users:logout' %}">Log Out</a>
+              </li>
             {% else %}
-              <li><a href="{% url 'users:register' %}">Register</a></li>
-              <li><a href="{% url 'users:login' %}">Log In</a></li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page"
+                href="{% url 'users:register' %}">Register</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page"
+                href="{% url 'users:login' %}">Log In</a>
+              </li>
             {% endif %}
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
-    <div class="container">
+    <div class="container bg-dark text-white rounded">
 
       <div class="page-header">
        {% block header %}{% endblock header %}
