--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -1,17 +1,19 @@
 {% extends "learning_logs/base.html" %}
+{% load bootstrap5 %}
 
 {% block header %}
-  <div class='jumbotron'>
-    <h1>Track your learning.</h1>
+  <div class="mt-4 p-5 bg-primary text-white rounded">
+    <h1 class="display-4">Track your learning.</h1>
   </div>
+  <br>
 {% endblock header %}
 
 {% block content %}
-  <h2>
+  <h2 class="lead">
     <a href="{% url 'users:register' %}">Register an account</a> to make
     your own Learning Log, and list the topics you're learning about.
   </h2>
-  <h2>
+  <h2 class="lead">
     Whenever you learn something new about a topic, make an entry
     summarizing what you've learned.
   </h2>
