--- a/learning_logs/templates/learning_logs/topics.html
+++ b/learning_logs/templates/learning_logs/topics.html
@@ -1,7 +1,21 @@
 {% extends "learning_logs/base.html" %}
 
 {% block header %}
-  <h1>Topics</h1>
+  <div class="container">
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+      <h1 class="d-flex align-items-center mb-3 mb-md-0 md-auto text-decoration-none">
+        Topics
+      </h1>
+      <ul class="nav nav-pills">
+        <li class="nav-item">
+          <button class="btn btn-primary">
+            <a href="{% url 'learning_logs:new_topic' %}"
+            style="color:white; text-decoration:none">NEW TOPIC</a>
+          </button>
+        </li>
+      </ul>    
+    </header>
+  </div>
 {% endblock header %}
 
 {% block content %}
@@ -18,6 +32,6 @@
     {% endfor %}
   </ul>
 
-  <h3><a href="{% url 'learning_logs:new_topic' %}">Add a new topic</a></h3>
+  <h3></h3>
   
 {% endblock content %}
